--- a/package.json
+++ b/package.json
@@ -15,25 +15,28 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.1.1",
+    "@mdx-js/react": "^2.1.5",
+    "@next/mdx": "^12.1.5",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
     "copy-to-clipboard": "^3.3.3",
     "next": "12.0.10",
     "next-images": "^1.8.4",
+    "nprogress": "^0.2.0",
+    "postcss": "^8.4.19",
     "prism-react-renderer": "^1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.4.0",
     "rehype-katex": "^4.0.0",
+    "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "sass": "^1.56.1",
-    "@mdx-js/loader": "^2.1.1",
-    "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^12.1.5",
-    "autoprefixer": "^10.4.13",
-    "nprogress": "^0.2.0",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "to-vfile": "^7.2.3"
   },
   "devDependencies": {}
 }
