--- a/package.json
+++ b/package.json
@@ -14,29 +14,35 @@
     "export": "next export"
   },
   "dependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.1.1",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.1.5",
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
+    "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
+    "github-slugger": "^2.0.0",
+    "gray-matter": "^4.0.3",
     "next": "12.0.10",
     "next-images": "^1.8.4",
+    "next-mdx-remote": "^4.2.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.19",
     "prism-react-renderer": "^1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.4.0",
+    "react-intersection-observer": "^9.4.1",
+    "react-js-pagination": "^3.0.3",
     "rehype-katex": "^4.0.0",
-    "remark": "^14.0.2",
+    "remark-external-links": "^9.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^3.0.1",
-    "remark-toc": "^8.0.1",
+    "remark-slug": "^7.0.1",
     "sass": "^1.56.1",
-    "tailwindcss": "^3.2.4",
-    "to-vfile": "^7.2.3"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {}
 }
